--- a/index.html
+++ b/index.html
@@ -6,8 +6,71 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Hello world!</h1>
+<header class = "header">
+    <div class="wrapper">
+    <a href="#" class="logo">Logo</a>
+    <nav class="header__navigation">
+        <ul class="navigation">
+            <li>About</li>
+            <li>Map</li>
+            <li>Zoos</li>
+            <li>Donate</li>
+            <li>Contact us</li>
+        </ul>
+    </nav>
+    <a class="designed">Designed by ©</a>
+    </div>
+</header>
+<section class="welcome">
+    <div class="container">
+        <div class="circle"></div>
+    <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
+        <button class="btn btn--elipse">Watch online</button>
+    </div>
+</section>
+
+<section class="animals">
+<div class="container-flowers">
+    <img src="img/flower_foto1.png" alt="Photo1" class="flower_foto1">
+    <img src="img/flower_foto2.png" alt="Photo2" class="flower_foto2">
+    <img src="img/flower_foto3.png" alt="Photo3" class="flower_foto3">
+</div>
+<div class="row">
+    <div class="col-1-of-2">
+        <img src="img/bamboo-cap.png" alt="Photo4" class="bamboo-cap">
+    </div>
+    <div class="col-1-of-2">
+<div class="how-it-works__text">
+    <h2 class="heading-secondary">The Backstage of the Wilderness World.</h2>
+    <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+    <h3 class="heading-tertiary">How it works</h3>
+    <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+</div>
+    </div>
+</div>
+
+    <div class="container-animals">
+        <div class="row">
+            <div class="col-1-of-3"></div>
+            <div class="col-1-of-3"></div>
+            <div class="col-1-of-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3"></div>
+            <div class="col-1-of-3"></div>
+            <div class="col-1-of-3"></div>
+        </div>
+        <button class="btn btn-circle btn-circle__right">&larr;</button>
+        <button class="btn btn-circle btn-circle__left">&rarr;</button>
+        <button class="btn btn--elipse">Choose your favourite</button>
+    </div>
+
+</section>
+<section class="pick">
+
+</section>
 </body>
 </html>
