--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </div>
     <div class="col-1-of-2">
 <div class="how-it-works__text">
-    <h2 class="heading-secondary">The Backstage of the Wilderness World.</h2>
+    <h2 class="heading-secondary heading-secondary__black">The Backstage of the Wilderness World.</h2>
     <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
-    <h3 class="heading-tertiary">How it works</h3>
+    <h4 class="heading-quaternary">How it works</h4>
     <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
 </div>
     </div>
@@ -69,8 +69,81 @@
     </div>
 
 </section>
+
 <section class="pick">
-<div></div>
+<div class="container-pick">
+    <h2 class="heading-secondary heading-secondary__orange">Pick and feed a friend</h2>
+    <h4 class="heading-quaternary">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+    <p class="paragraph paragraph__bold">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+    <p class="paragraph">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund . </p>
+    <h3 class="heading-tertiary">How it works</h3>
+    <div class="row">
+        <div class="col-1-of-3">
+            <div class="square-white">
+                <a href="#" class="icon">Icon pay</a>
+            </div>
+            <p class="paragraph">Pay with card</p>
+        </div>
+        <div class="col-1-of-3">
+            <div class="square-white">
+                <a href="#" class="icon">Icon payment</a>
+            </div>
+            <p class="paragraph">Payment goes to the zoo</p>
+        </div>
+        <div class="col-1-of-3">
+            <div class="square-white">
+                <a href="#" class="icon">Icon monkey</a>
+            </div>
+            <p class="paragraph">Your favourite animal gets delicious dish</p>
+        </div>
+    </div>
+    <button class="btn btn--elipse">Feed a friend now</button>
+</div>
+</section>
+
+<section class="testimonials">
+    <div class="container-testimonials">
+        <h3 class="heading-tertiary">Testimonials</h3>
+        <div class="row">
+            <div class="col-1-of-4"></div>
+            <div class="col-1-of-4"></div>
+            <div class="col-1-of-4"></div>
+            <div class="col-1-of-4"></div>
+        </div>
+        <div class="scroller"></div>
+        <button class="btn btn--square btn--square__orange">leave feedback</button>
+    </div>
+</section>
+
+<section class="footer">
+    <div class="row">
+        <div class="col-1-of-2">
+            <a href="#" class="logo">Logo</a>
+        </div>
+        <div class="col-1-of-2">
+            <h4 class="heading-quaternary">Subscribe to our news</h4>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="form">
+                        <input type="email" class="form__input" placeholder="Enter your email" id="email" required>
+                        <label for="email" class="form__label">Enter your email</label>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <button class="btn btn--square btn--square__white">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+<nav class="footer__navigation">
+    <ul class="navigation">
+        <li>About</li>
+        <li>Map</li>
+        <li>Zoos</li>
+        <li>Donate</li>
+        <li>Contact us</li>
+    </ul>
+</nav>
 </section>
 </body>
 </html>
