--- a/index.html
+++ b/index.html
@@ -11,58 +11,66 @@
 <body>
 <header class = "header">
     <div class="wrapper">
-    <a href="#" class="logo">Logo</a>
-    <nav class="header__navigation">
-        <ul class="navigation">
-            <li>About</li>
-            <li>Map</li>
-            <li>Zoos</li>
-            <li>Donate</li>
-            <li>Contact us</li>
-        </ul>
-    </nav>
-    <a class="designed">Designed by ©</a>
+        <a href="#" class="logo">Logo</a>
+        <nav class="header__navigation">
+            <ul class="navigation">
+                <li>About</li>
+                <li>Map</li>
+                <li>Zoos</li>
+                <li>Donate</li>
+                <li>Contact us</li>
+            </ul>
+        </nav>
+        <a class="designed">Designed by ©</a>
     </div>
 </header>
-<section class="welcome">
+<section class="section-welcome">
     <div class="container">
         <div class="circle"></div>
-    <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
+        <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
         <button class="btn btn--elipse">Watch online</button>
     </div>
 </section>
 
-<section class="animals">
-<div class="container-flowers">
-    <img src="img/flower_foto1.png" alt="Photo1" class="flower_foto1">
-    <img src="img/flower_foto2.png" alt="Photo2" class="flower_foto2">
-    <img src="img/flower_foto3.png" alt="Photo3" class="flower_foto3">
-</div>
-<div class="row">
-    <div class="col-1-of-2">
-        <img src="img/bamboo-cap.png" alt="Photo4" class="bamboo-cap">
+<section class="section-animals">
+    <div class="container-flowers">
+        <img src="img/flower_foto1.png" alt="Photo1" class="flower_foto1">
+        <img src="img/flower_foto2.png" alt="Photo2" class="flower_foto2">
+        <img src="img/flower_foto3.png" alt="Photo3" class="flower_foto3">
     </div>
-    <div class="col-1-of-2">
-<div class="how-it-works__text">
-    <h2 class="heading-secondary heading-secondary__black">The Backstage of the Wilderness World.</h2>
-    <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
-    <h4 class="heading-quaternary">How it works</h4>
-    <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
-</div>
+    <div class="wrapper">
+        <div class="row">
+
+            <div class="col-1-of-2">
+                <img src="img/bamboo-cap.png" alt="Photo4" class="bamboo-cap">
+            </div>
+
+            <div class="col-1-of-2">
+                <div class="how-it-works__text">
+                    <h2 class="heading-secondary heading-secondary__black">The Backstage of the Wilderness World.</h2>
+                    <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+                    <h4 class="heading-quaternary">How it works</h4>
+                    <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+                </div>
+            </div>
+
+        </div>
     </div>
-</div>
 
     <div class="container-animals">
+
         <div class="row">
             <div class="col-1-of-3"></div>
             <div class="col-1-of-3"></div>
             <div class="col-1-of-3"></div>
         </div>
+
         <div class="row">
             <div class="col-1-of-3"></div>
             <div class="col-1-of-3"></div>
             <div class="col-1-of-3"></div>
         </div>
+
         <button class="btn btn-circle btn-circle__right">&larr;</button>
         <button class="btn btn-circle btn-circle__left">&rarr;</button>
         <button class="btn btn--elipse">Choose your favourite</button>
@@ -70,80 +78,93 @@
 
 </section>
 
-<section class="pick">
-<div class="container-pick">
-    <h2 class="heading-secondary heading-secondary__orange">Pick and feed a friend</h2>
-    <h4 class="heading-quaternary">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
-    <p class="paragraph paragraph__bold">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
-    <p class="paragraph">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund . </p>
-    <h3 class="heading-tertiary">How it works</h3>
-    <div class="row">
-        <div class="col-1-of-3">
-            <div class="square-white">
-                <a href="#" class="icon">Icon pay</a>
-            </div>
-            <p class="paragraph">Pay with card</p>
-        </div>
-        <div class="col-1-of-3">
-            <div class="square-white">
-                <a href="#" class="icon">Icon payment</a>
-            </div>
-            <p class="paragraph">Payment goes to the zoo</p>
-        </div>
-        <div class="col-1-of-3">
-            <div class="square-white">
-                <a href="#" class="icon">Icon monkey</a>
-            </div>
-            <p class="paragraph">Your favourite animal gets delicious dish</p>
-        </div>
-    </div>
-    <button class="btn btn--elipse">Feed a friend now</button>
-</div>
-</section>
+<section class="section-pick">
+    <div class="wrapper">
+        <div class="container-pick">
 
-<section class="testimonials">
-    <div class="container-testimonials">
-        <h3 class="heading-tertiary">Testimonials</h3>
-        <div class="row">
-            <div class="col-1-of-4"></div>
-            <div class="col-1-of-4"></div>
-            <div class="col-1-of-4"></div>
-            <div class="col-1-of-4"></div>
-        </div>
-        <div class="scroller"></div>
-        <button class="btn btn--square btn--square__orange">leave feedback</button>
-    </div>
-</section>
+            <h2 class="heading-secondary heading-secondary__orange">Pick and feed a friend</h2>
+            <h4 class="heading-quaternary">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+            <p class="paragraph paragraph__bold">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+            <p class="paragraph">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund . </p>
+            <h3 class="heading-tertiary">How it works</h3>
 
-<section class="footer">
-    <div class="row">
-        <div class="col-1-of-2">
-            <a href="#" class="logo">Logo</a>
-        </div>
-        <div class="col-1-of-2">
-            <h4 class="heading-quaternary">Subscribe to our news</h4>
             <div class="row">
-                <div class="col-1-of-2">
-                    <div class="form">
-                        <input type="email" class="form__input" placeholder="Enter your email" id="email" required>
-                        <label for="email" class="form__label">Enter your email</label>
+                <div class="col-1-of-3">
+                    <div class="square-white">
+                        <a href="#" class="icon">Icon pay</a>
+                    </div>
+                    <p class="paragraph">Pay with card</p>
+                </div>
+
+                <div class="col-1-of-3">
+                    <div class="square-white">
+                        <a href="#" class="icon">Icon payment</a>
+                    </div>
+                    <p class="paragraph">Payment goes to the zoo</p>
+                </div>
+
+                <div class="col-1-of-3">
+                    <div class="square-white">
+                        <a href="#" class="icon">Icon monkey</a>
+                    </div>
+                    <p class="paragraph">Your favourite animal gets delicious dish</p>
+                </div>
+            </div>
+
+            <button class="btn btn--elipse">Feed a friend now</button>
+        </div>
+    </div>
+</section>
+
+<section class="section-testimonials">
+    <div class="wrapper">
+        <div class="container-testimonials">
+            <h3 class="heading-tertiary">Testimonials</h3>
+            <div class="row">
+                <div class="col-1-of-4"></div>
+                <div class="col-1-of-4"></div>
+                <div class="col-1-of-4"></div>
+                <div class="col-1-of-4"></div>
+            </div>
+            <div class="scroller"></div>
+            <button class="btn btn--square btn--square__orange">leave feedback</button>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="wrapper">
+        <div class="row">
+            <div class="col-1-of-2">
+                <a href="#" class="logo">Logo</a>
+            </div>
+
+            <div class="col-1-of-2">
+                <h4 class="heading-quaternary">Subscribe to our news</h4>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <div class="form">
+                            <input type="email" class="form__input" placeholder="Enter your email" id="email" required>
+                            <label for="email" class="form__label">Enter your email</label>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-2">
+                        <button class="btn btn--square btn--square__white">Submit</button>
                     </div>
                 </div>
-                <div class="col-1-of-2">
-                    <button class="btn btn--square btn--square__white">Submit</button>
-                </div>
             </div>
         </div>
+        <nav class="footer__navigation">
+            <ul class="navigation">
+                <li>About</li>
+                <li>Map</li>
+                <li>Zoos</li>
+                <li>Donate</li>
+                <li>Contact us</li>
+            </ul>
+        </nav>
     </div>
-<nav class="footer__navigation">
-    <ul class="navigation">
-        <li>About</li>
-        <li>Map</li>
-        <li>Zoos</li>
-        <li>Donate</li>
-        <li>Contact us</li>
-    </ul>
-</nav>
-</section>
+</footer>
 </body>
 </html>
