feat: styles updated

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
 <header class = "header">
-    <div class="wrapper">
+    <div class="wrapper header__wrapper">
         <a href="#" class="logo">Logo</a>
         <nav class="header__navigation">
             <ul class="navigation">
-                <li>About</li>
-                <li>Map</li>
-                <li>Zoos</li>
-                <li>Donate</li>
-                <li>Contact us</li>
+                <li class="navigation__link">About</li>
+                <li class="navigation__link">Map</li>
+                <li class="navigation__link">Zoos</li>
+                <li class="navigation__link">Donate</li>
+                <li class="navigation__link">Contact us</li>
             </ul>
         </nav>
-        <a class="designed">Designed by ©</a>
+        <a class="designed">Designed by ©lena</a>
     </div>
 </header>
 <section class="section-welcome">
