feat: styles updated

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
     </div>
 </header>
 <section class="section-welcome">
-    <div class="container">
-        <div class="circle"></div>
-        <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
-        <button class="btn btn--elipse">Watch online</button>
-    </div>
+        <div class="container-welcome">
+            <div class="circle"></div>
+            <div class="heading">
+                <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
+            </div>
+            <div class="btn-welcome">
+                <button class="btn btn-elipse">Watch online</button>
+            </div>
+        </div>
 </section>
 
 <section class="section-animals">
@@ -73,7 +77,7 @@
 
         <button class="btn btn-circle btn-circle__right">&larr;</button>
         <button class="btn btn-circle btn-circle__left">&rarr;</button>
-        <button class="btn btn--elipse">Choose your favourite</button>
+        <button class="btn btn-elipse">Choose your favourite</button>
     </div>
 
 </section>
@@ -111,7 +115,7 @@
                 </div>
             </div>
 
-            <button class="btn btn--elipse">Feed a friend now</button>
+            <button class="btn btn-elipse">Feed a friend now</button>
         </div>
     </div>
 </section>
@@ -127,7 +131,7 @@
                 <div class="col-1-of-4"></div>
             </div>
             <div class="scroller"></div>
-            <button class="btn btn--square btn--square__orange">leave feedback</button>
+            <button class="btn btn-square btn-square__orange">leave feedback</button>
         </div>
     </div>
 </section>
@@ -150,7 +154,7 @@
                     </div>
 
                     <div class="col-1-of-2">
-                        <button class="btn btn--square btn--square__white">Submit</button>
+                        <button class="btn btn-square btn-square__white">Submit</button>
                     </div>
                 </div>
             </div>
