feat: - styles updated - new components added

--- a/index.html
+++ b/index.html
@@ -9,55 +9,54 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class = "header">
-    <div class="wrapper header__wrapper">
-        <a href="#" class="logo">Logo</a>
-        <nav class="header__navigation">
-            <ul class="navigation">
-                <li class="navigation__link">About</li>
-                <li class="navigation__link">Map</li>
-                <li class="navigation__link">Zoos</li>
-                <li class="navigation__link">Donate</li>
-                <li class="navigation__link">Contact us</li>
-            </ul>
-        </nav>
-        <a class="designed">Designed by ©lena</a>
-    </div>
-</header>
+
 <section class="section-welcome">
-        <div class="container-welcome">
-            <div class="circle"></div>
-            <div class="heading">
-                <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
-            </div>
-            <div class="btn-welcome">
-                <button class="btn btn-elipse">Watch online</button>
-            </div>
+
+    <header class = "header">
+        <div class="wrapper header__wrapper">
+            <a href="#" class="logo">Logo</a>
+            <nav class="header__navigation">
+                <ul class="navigation">
+                    <li class="navigation__link">About</li>
+                    <li class="navigation__link">Map</li>
+                    <li class="navigation__link">Zoos</li>
+                    <li class="navigation__link">Donate</li>
+                    <li class="navigation__link">Contact us</li>
+                </ul>
+            </nav>
+            <a class="designed">Designed by ©lena</a>
         </div>
+    </header>
+
+    <div class="circle"></div>
+    <div class="heading">
+        <h1 class="heading-primary">Watch your <span class="heading-primary__yellow">favorite</span> animal online</h1>
+    </div>
+    <div class="btn-welcome">
+        <button class="btn btn-elipse">Watch online</button>
+    </div>
 </section>
 
 <section class="section-animals">
-    <div class="container-flowers">
         <img src="img/flower_foto1.png" alt="Photo1" class="flower_foto1">
-        <img src="img/flower_foto2.png" alt="Photo2" class="flower_foto2">
-        <img src="img/flower_foto3.png" alt="Photo3" class="flower_foto3">
+
     </div>
     <div class="wrapper">
         <div class="row">
-
+<div class="bamboo">
             <div class="col-1-of-2">
-                <img src="img/bamboo-cap.png" alt="Photo4" class="bamboo-cap">
+                <img src="img/bamboo-cap.png" alt="Photo4" class="bamboo-photo">
             </div>
 
             <div class="col-1-of-2">
-                <div class="how-it-works__text">
+                <div class="bamboo-text">
                     <h2 class="heading-secondary heading-secondary__black">The Backstage of the Wilderness World.</h2>
-                    <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+                    <p class="paragraph paragraph-bamboo1">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
                     <h4 class="heading-quaternary">How it works</h4>
-                    <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+                    <p class="paragraph paragraph-bamboo2">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
                 </div>
             </div>
-
+</div>
         </div>
     </div>
 
@@ -79,7 +78,8 @@
         <button class="btn btn-circle btn-circle__left">&rarr;</button>
         <button class="btn btn-elipse">Choose your favourite</button>
     </div>
-
+    <img src="img/flower_foto2.png" alt="Photo2" class="flower_foto2">
+    <img src="img/flower_foto3.png" alt="Photo3" class="flower_foto3">
 </section>
 
 <section class="section-pick">
